<resources>
<string name="app_name">La Caracola Magica</string>
<string name="powered_by_digital_stone">Powered by Digital Stone</string>
<string name="designed_by">Designed by</string>
<string name="mariowolfx">MarioWolfX</string>
<string name="escribe_tu_pregunta_y_toca_la_caracola_magica">Escribe tu pregunta y toca la Caracola Magica</string>
<string name="version">Ver 2.0</string>
<string name="boton_salir">boton Salir</string>
<string name="imagen_caracola">Imagen caracola</string>
</resources>