<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".SplashActivity">


    <TextView
        android:id="@+id/txtBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/caesar_dressing"
        android:text="The Caracola Magica App"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/version"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtPowered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powered_by_digital_stone"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dsLogo" />

    <TextView
        android:id="@+id/txtDesigned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/designed_by"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txtVersion"
        app:layout_constraintEnd_toStartOf="@+id/txtVersion"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/dsLogo"
        android:layout_width="316dp"
        android:layout_height="191dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBanner"
        app:srcCompat="@drawable/dslogo" />

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="205dp"
        android:layout_height="122dp"
        android:layout_marginTop="76dp"
        android:src="@drawable/loader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPowered" />

    <TextView
        android:id="@+id/txtMarioWolfX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/trade_winds"
        android:text="@string/mariowolfx"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txtVersion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtVersion" />
</androidx.constraintlayout.widget.ConstraintLayout>